packages/core/src/components/side-panel/side-panel.scss
@import 'common-variables';
@import 'mixins/hover';
@import 'mixins/shadow-dom/component';
@import '~animate.css/animate.min';

$side-pane-expanded-width: 16rem;

:host {
  @include ix-component;
  background-color: var(--theme-nav--background);
  position: fixed;

  .side-pane-horizontal {

  }

  .side-panel-vertical {
    height: 100%;

    .container {
      display: flex;
      flex-direction: column;
      align-items: center;

      .rotate {
        writing-mode: vertical-lr;
        text-orientation: mixed;
        transform: rotate(180deg);
      }
    }

    &.expanded {
      .container {
        flex-direction: row;

        .rotate {
          writing-mode: unset;
          text-orientation: unset;
          transform: unset;
        }
      }
    }
  }

}


:host(.host-horizontal) {
  width: 100%;
  height: 32px;
}

:host(.host-horizontal.expanded) {
  width: 100%;
  height: $side-pane-expanded-width;
}

:host(.host-vertical) {
  height: 100%;
  width: 32px;
}

:host(.host-vertical.expanded) {
  height: 100%;
  width: $side-pane-expanded-width;
}

